--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
-    <meta name="description" content="We would like to invite you to our big day.">
+    <title>Nadine & Manuel heiraten!</title>
+    <meta name="description" content="Wir möchten euch zu unserer Hochzeit einladen.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
-    <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
+    <meta property="og:title" content="Nadine & Manuel heiraten!">
+    <meta property="og:description" content="Wir möchten euch zu unserer Hochzeit einladen.">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -73,14 +72,14 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">How we met</a></li>
-                            <li><a href="#events">Events</a></li>
+                            <li><a href="#intro">Intro</a></li>
+                            <li><a href="#events">Ablauf</a></li>
                             <li><a href="#instagram">Instagram</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#faq">FAQ</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Venue</a></li>
+                            <li><a href="#map" class="login">Location</a></li>
                             <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
                         </ul>
                     </nav>
@@ -116,10 +115,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
-                    it.</p>
-                <div class="share-bar"></div>
+                <h3>Wir heraten!</h3>
+                <p>Am 29.08.2026 in Gut Altholz bei Plattling</p>
             </div>
         </div>
     </div>
@@ -129,26 +126,23 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">How we met</h3>
+                <h3 class="header">Feiern, Lachen, Lieben! 🎉💍</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/we.png" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+                    Seit 2018 gehen wir gemeinsam durchs Leben – jetzt wird’s offiziell! Wir laden euch herzlich ein, mit uns eine freie Trauung zu feiern, die genauso locker, fröhlich und unvergesslich wird wie unsere gemeinsame Zeit. Keine steife Etikette, kein Stress – bringt einfach gute Laune mit und lasst uns zusammen einen großartigen Tag verbringen!
+                    Wir können es kaum erwarten, mit euch anzustoßen, zu tanzen und diesen besonderen Moment mit unseren liebsten Menschen zu teilen. 💕🥂
+                    Seid ihr dabei?
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/we2.png" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/we.png" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/we.png" class="wp9"></div>
         </div>
     </div>
 </section>
@@ -157,45 +151,53 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Events</h3>
+                <h3 class="header">Ablauf</h3>
             </div>
         </div>
         <div class="row">
+            <p><strong>29. August 2026</strong></p>
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>27th November</strong></p>
-
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
-                    <p>It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom
-                        attend the event together and a professional mehndi artist applies
-                        mehndi to the bride's hands and feet. This will be having a celebratory
-                        festival feel to it with people wearing vibrant clothes and dancing, singing, playing
-                        games and a lot more.</p>
+                    <h5>Ankunft <span class="time">13:00 Uhr - 13:30 Uhr</span></h5>
+                    <p>Vor der freien Trauung heißen wir euch herzlich mit einem kleinen Pre-Wedding Empfang willkommen.
+                        Bitte schaut, dass ihr rechtzeitig da seid, da wir um 14 Uhr mit der Trauung starten möchten :).</p>
                 </div>
                 <div class="wp5">
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
-                    <p>This event is no way close to ethnic. The bride & groom would like to have some "shots before the
-                        knot". With booze flowing down the floor and the western attire on, everyone would be busy
-                        showing off their new moves on the stage which they have finely honed. Lastly, expect some beer
-                        pong matches & karaoke for sure.</p>
+                    <h5>Freie Trauung <span class="time">14:00 Uhr - 14:45 Uhr</span></h5>
+                    <p>Wir freuen uns, diesen besonderen Moment mit euch an einem idyllischen Teich feiern zu dürfen. 
+                        Umgeben von sanftem Wasser, grüner Natur und einer angenehmen Brise geben wir uns das Ja-Wort. 
+                        Sollte die Sonne an diesem Tag besonders strahlen, bietet uns der leichte Schatten ein angenehmes 
+                        Plätzchen für eine feierliche und entspannte Zeremonie.</p>
+                </div>
+                <div class="wp4">
+                    <h5>Sektempfang <span class="time">15:00 Uhr - 16:00 Uhr</span></h5>
+                    <p>Nach der Trauung möchten wir diesen glücklichen Moment mit euch gebührend feiern. 
+                        Wir laden euch herzlich zu einem Sektempfang ein, begleitet von Canapés. 
+                        Stoßt mit uns an, genießt die besondere Atmosphäre und lasst uns gemeinsam diesen unvergesslichen Tag beginnen.
+                    </p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <p><strong>28th November</strong></p>
-
-                    <h5>Haldi <span class="time">10AM-11AM</span></h5>
-                    <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
-                        bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
-                        and face of the bride. The groom is not allowed to see the bride after this ritual until the
-                        final wedding ceremony starts.</p>
+                    <h5>Kaffee & Kuchen <span class="time">16:00 Uhr - 17:30 Uhr</span></h5>
+                    <p>Nach der feierlichen Trauung und dem ersten Anstoßen möchten wir den Nachmittag mit euch in entspannter Atmosphäre genießen. 
+                        Dazu gibt es duftenden Kaffee und eine liebevolle Auswahl an köstlichen Kuchen.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>This is the main event in the entire wedding when the bride and the groom tie the
-                        knot. The groom comes with the barat and is greeted by the bride side with some dhol of course
-                        as maximum number of guests would be attending this event. This is when the couple circle the
-                        sacred fire and are finally declared husband and wife.</p>
+                    <h5>Hochzeitsdinner <span class="time">17:30 Uhr - 19:00 Uhr</span></h5>
+                    <p>Nach einem wunderschönen Tag in der Parkanlage erwartet euch ein stilvolles Dinner im Hochzeitspavillion.
+                        Das Dinner besteht aus einem 3-Gänge-Menü. Lasst uns im Formular unten wissen, falls ihr bestimmte Bedürfnisse habt.
+                    </p>
+                </div>
+                <div class="wp6">
+                    <h5>Party! <span class="time">19:00 Uhr - 00:00 Uhr</span></h5>
+                    <p>Nachdem wir gemeinsam einen unvergesslichen Tag erlebt haben, wird es Zeit, 
+                        die Tanzfläche zu erobern! Am Abend möchten wir mit euch ausgelassen feiern, 
+                        lachen und unvergessliche Erinnerungen schaffen. Freut euch auf gute Musik, kühle Drinks und eine großartige Stimmung,
+                        denn was wäre ein Hochzeitstag ohne eine gebührende Party?
+                        Lasst uns diesen besonderen Tag mit viel Freude, Liebe und natürlich jeder Menge 
+                        Tanz ausklingen lassen! Wir können es kaum erwarten, mit euch zu feiern! 🥂🎶
+                    </p>
                 </div>
             </div>
         </div>
@@ -206,10 +208,6 @@
                 </a>
             </div>
         </div>
-        <!--<div class="row">
-            <div class="col-xs-12 section-border section-padding">
-            </div>
-        </div>-->
     </div>
 
     <div id="dc-modal" class="modal fade" tabindex="-1" role="dialog">
@@ -361,20 +359,30 @@
     </div>-->
 </section>
 
-<section id="video-bg" class="hidden-sm hidden-xs">
-    <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+<section id="faq" class="hidden-sm hidden-xs">
+    <div class="text-center">
+        <h3>FAQ</h3>
     </div>
-    <div id="video-content">
-        <h5>Kolkata</h5>
-        <p>City of joy</p>
+    <div class="text-center">
+        <h5>Was ist, wenn es regnet?</h5>
+        <p>
+            Sollte es regnen wir die Trauung und der Empfang in einem kleinem, aber liebevollem Nebenhäuschen stattfinden.
+            Das Pavillion ist wetterfest, somit ist das Dinner und die Party nicht gefärdet.
+        </p>
+        <h5>Kann ich übernachten?</h5>
+        <p>
+            Ja! Wir haben eine reservierte Anzahl an Zimmern. Damit es aber genügend Schlafplätze für jeden gibt, gebt uns 
+            bitte bei der Anmeldung Bescheid, ob ihr übernachten möchtet.
+            Am nächsten Morgen wird ein kleines Frühstück zubereitet.
+        </p>
     </div>
+</div>
 </section>
 
 <section id="map" class="section-padding">
     <div class="text-center">
-        <h3>How do I get there?</h3>
-        <p>It's way easier than you think!</p>
+        <h3>Wie komme ich zur Veranstalung?</h3>
+        <p>Kein Problem!</p>
     </div>
     <div id="map-canvas"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
@@ -382,30 +390,24 @@
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
                 <div class="text-center">
                     <div id="btn-show-content" class="toggle-map-content pointer-events-auto">
-                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
+                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Zeige Info
                     </div>
                 </div>
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>ITC Fortune Park</h5>
-                            <p>Kona Expressway, Howrah, West Bengal 711403, India</p>
+                            <h5>Gut Althollz</h5>
+                            <p>Altholz 6, 94447 Plattling</p>
                         </div>
                         <div class="col-md-6">
-                            <h5>Mr. Amit Roy</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+919412345678">+91 9412345678</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+917123456789">+91 7123456789</a></p>
+                            <h5>Kontakt</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+49 17642960187">+49 17642960187</a><br></p>
                         </div>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
-                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
-                        </div>
-                        <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
-                                map</a>
+                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Zeige
+                                Karte</a>
                         </div>
                     </div>
                 </div>
@@ -435,8 +437,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 1st of November '17</p>
+                <h3>Auf was wartest du noch?</h3>
+                <p>Wir würden uns sehr freuen, wenn du vor vor dem 1. November 2025 antworten kannst.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -492,7 +494,6 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
             </div>
         </div>
     </div>
