--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <ul class="primary-nav">
                             <li><a href="#intro">Intro</a></li>
                             <li><a href="#events">Ablauf</a></li>
-                            <li><a href="#instagram">Instagram</a></li>
+                            <li><a href="#overview">Übersicht</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#faq">FAQ</a></li>
                         </ul>
@@ -95,7 +95,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
                     <!--<h1>Ram and Antara</h1>-->
-                    <img src="img/logo-lg.png">
+                    <img src="img/logo2.png">
                     <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
@@ -142,7 +142,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/we.png" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/we.png" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/we2.png" class="wp9" style="height: 80%;"></div>
         </div>
     </div>
 </section>
@@ -217,37 +217,15 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <h3 class="text-center section-padding">Ugh... dress codes?</h3>
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
                     <p>
-                        <strong>Ethnic indian wear</strong>
+                        <strong>Festlich, aber entspannt 🎩👗</strong>
                         <br>
-                        Ladies can wear something
-                        <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
-                        and gentlemen can be on
-                        their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
-                        kurtas</a> with pants or pyjamas along with an optional shawl.
-                    </p>
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
-                    <p>
-                        <strong>Western attire</strong>
-                        <br>
-                        A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
-                        to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
-                    </p>
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>
-                        <strong>Indo-western</strong>
-                        <br>
-                        Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
-                        dresses and the list
-                        goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
-                        suit/blazer, you can do a <a
-                            href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/">high-neck
-                        (band gala) waistcoat & shirt</a> combo.
+                        Wir freuen uns, wenn ihr diesen besonderen Tag mit uns feiert – 
+                        ganz gleich, was ihr tragt! Wer sich inspirieren lassen möchte: 
+                        Ein klassisch-eleganter Look passt perfekt zu unserer Feier. 
+                        Wir lieben [Pastelltöne, Erdtöne, Beige, Grün & Rot], 
+                        doch das ist nur eine Anregung – das Wichtigste ist, dass ihr euch 
+                        wohlfühlt und den Tag mit uns genießt!
                     </p>
                 </div>
             </div><!-- /.modal-content -->
@@ -256,23 +234,104 @@
 
 </section>
 
-<section id="instagram" class="section-padding">
-    <div class="container">
+<section id="overview" class="section-padding">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>A picture is worth a thousand words!</h3>
-                <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
-                </p>
+                <h3>Locationübersicht</h3>
             </div>
         </div>
-        <div class="row section-border wp7">
-            <div class="col-md-4 col-md-offset-4">
-                <img src="img/iphone_instagram.jpg">
+        <div class="row">
+            <div class="image-container">
+                <img src="img/overview.png" class="main-image" alt="" style="max-width: 100%; height: auto; display: block; margin: 0 auto;"/>
+
+                <div class="info-box" style="top: 20%; left: 30%;">
+                    <div class="info-content">📍 Empfang</div>
+                </div>
+
+                <div class="info-box" style="top: 20%; left: 90%;">
+                    <div class="info-content">📍 Trauung</div>
+                </div>
+
+                <div class="info-box" style="top: 20%; left: 30%;">
+                    <div class="info-content">📍 Party</div>
+                </div>
+                
+                <div class="info-box" style="top: 50%; left: 60%;">
+                    <div class="info-content">📍 Parkplatz</div>
+                </div>
+                
             </div>
         </div>
     </div>
 </section>
+
+<style>
+    .image-container {
+        position: relative;
+    }
+
+    .main-image {
+        max-width: 100%;
+        height: auto;
+        display: block;
+    }
+
+    .info-box {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        display: none;
+    }
+
+    .info-content {
+        background: rgba(0, 0, 0, 0.8);
+        color: white;
+        padding: 10px 15px;
+        border-radius: 8px;
+        font-size: 14px;
+        white-space: nowrap;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
+        opacity: 0;
+        transform: translateY(-10px);
+        position: relative;
+    }
+
+    /* Kleiner Pfeil unter der Infobox */
+    .info-content::after {
+        content: "";
+        position: absolute;
+        bottom: -8px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-top: 8px solid rgba(0, 0, 0, 0.8);
+    }
+
+    /* Zeigt die Box beim Hover oder Touch */
+    .image-container:hover .info-box,
+    .info-box:hover {
+        display: block;
+    }
+
+    .image-container:hover .info-content,
+    .info-box:hover .info-content {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    /* Mobile Unterstützung */
+    .image-container:active .info-box .info-content {
+        display: block;
+        opacity: 1;
+        transform: translateY(0);
+    }
+</style>
+
+
 
 <section id="eng-pics" class="section-padding">
     <div class="container-fluid">
@@ -288,7 +347,7 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX2942-sm.jpg" alt=""/>
+                        <img src="img/overview.png" alt=""/>
                     </div>
                 </a>
             </div>
@@ -375,6 +434,11 @@
             bitte bei der Anmeldung Bescheid, ob ihr übernachten möchtet.
             Am nächsten Morgen wird ein kleines Frühstück zubereitet.
         </p>
+        <h5>Gibt es Parkplätze?</h5>
+        <p>
+            Das Anwesen bietet genügend kostenlose Parkplätze für alle Gäste.
+        </p>
+
     </div>
 </div>
 </section>
@@ -401,7 +465,7 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Kontakt</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+49 17642960187">+49 17642960187</a><br></p>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+49 9917320">+49 9917320</a><br></p>
                         </div>
                     </div>
                     <div class="row text-center">
