--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>Wir heraten!</h3>
+                <h3>Wir heiraten!</h3>
                 <p>Am 29.08.2026 in Gut Altholz bei Plattling</p>
             </div>
         </div>
