Add pictures and remove obsolete ones

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <li><a href="#intro">Intro</a></li>
                             <li><a href="#events">Ablauf</a></li>
                             <li><a href="#overview">Übersicht</a></li>
-                            <li><a href="#eng-pics">Engagement</a></li>
+                            <li><a href="#eng-pics">Bilder</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#faq">FAQ</a></li>
                         </ul>
                         <ul class="member-actions">
@@ -245,7 +245,7 @@
             <div class="image-container">
                 <img src="img/overview.png" class="main-image" alt="" style="max-width: 100%; height: auto; display: block; margin: 0 auto;"/>
 
-                <div class="info-box" style="top: 20%; left: 30%;">
+                <div class="info-box" style="top: 40%; left: 60%;">
                     <div class="info-content">📍 Empfang</div>
                 </div>
 
@@ -253,11 +253,11 @@
                     <div class="info-content">📍 Trauung</div>
                 </div>
 
-                <div class="info-box" style="top: 20%; left: 30%;">
+                <div class="info-box" style="top: 60%; left: 10%;">
                     <div class="info-content">📍 Party</div>
                 </div>
                 
-                <div class="info-box" style="top: 50%; left: 60%;">
+                <div class="info-box" style="top: 90%; left: 70%;">
                     <div class="info-content">📍 Parkplatz</div>
                 </div>
                 
@@ -268,7 +268,10 @@
 
 <style>
     .image-container {
+        display: inline-block;
         position: relative;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 
     .main-image {
@@ -288,7 +291,7 @@
         color: white;
         padding: 10px 15px;
         border-radius: 8px;
-        font-size: 14px;
+        font-size: 23px;
         white-space: nowrap;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
@@ -337,67 +340,107 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Engagement Pics</h3>
+                <h3 class="header">Bilder</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX2942-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/1.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/overview.png" alt=""/>
+                        <img src="img/eng_pics/1.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/IMG_3483-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/2.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/IMG_3483-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/2.JPG" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX2992-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/3.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX2992-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/3.JPG" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX3064-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/4.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX3064-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/4.JPG" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4089-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/5.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/NGP_4089-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/5.JPG" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4119-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/6.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/NGP_4119-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/6.JPG" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/7.png">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/7.png" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/8.png">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/8.png" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/9.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/9.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/10.png">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/10.png" alt=""/>
                     </div>
                 </a>
             </div>
