--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <li><a href="#intro">Intro</a></li>
                             <li><a href="#events">Ablauf</a></li>
                             <li><a href="#overview">Übersicht</a></li>
-                            <li><a href="#eng-pics">Bilder</a></li>
+                            <li><a href="#eng-pics">Wir</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#faq">FAQ</a></li>
                         </ul>
                         <ul class="member-actions">
@@ -340,7 +340,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Bilder</h3>
+                <h3 class="header">Wir</h3>
             </div>
         </div>
         <div class="row">
