Small adaptions for phone

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="col-sm-4 hidden-xs"></div>
         </div>
     </div>
-    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
+    <div class="down-arrow floating-arrow"><a href="#rsvp"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
 <section id="invitation" class="section-padding">
@@ -133,9 +133,14 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/we.png" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    Seit 2018 gehen wir gemeinsam durchs Leben – jetzt wird’s offiziell! Wir laden euch herzlich ein, mit uns eine freie Trauung zu feiern, die genauso locker, fröhlich und unvergesslich wird wie unsere gemeinsame Zeit. Keine steife Etikette, kein Stress – bringt einfach gute Laune mit und lasst uns zusammen einen großartigen Tag verbringen!
-                    Wir können es kaum erwarten, mit euch anzustoßen, zu tanzen und diesen besonderen Moment mit unseren liebsten Menschen zu teilen. 💕🥂
-                    Seid ihr dabei?
+                    Seit 2018 gehen wir gemeinsam durchs Leben – jetzt wird’s offiziell! 
+                    Wir laden euch herzlich ein, mit uns eine freie Trauung zu feiern, die genauso locker, 
+                    fröhlich und unvergesslich wird wie unsere gemeinsame Zeit. Keine steife Etikette, 
+                    kein Stress – bringt einfach gute Laune mit und lasst uns zusammen einen großartigen Tag verbringen!
+                    Wir können es kaum erwarten, mit euch anzustoßen, zu tanzen und diesen besonderen Moment mit 
+                    unseren liebsten Menschen zu teilen. 💕🥂
+                    Bist du dabei?
+                    Falls ja, dann gebe uns mit dem Formular <a href="#rsvp">unten</a> Bescheid. Wir freuen uns auf dich!
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/we2.png" class="wp2"></div>
