Add more infos to FAQ

--- a/index.html
+++ b/index.html
@@ -502,6 +502,8 @@
             Ja! Wir haben eine reservierte Anzahl an Zimmern. 
             Damit es genügend Schlafplätze für alle gibt, gebt uns bitte bei der Anmeldung Bescheid, 
             ob ihr übernachten möchtet. Am nächsten Morgen wird ein kleines Frühstück zubereitet.
+            <br>
+            Die Preise und Zimmerdetails findest du <a href="https://gut-altholz.de/hotel/">hier</a>.
         </p>
         <h5>Gibt es Parkplätze?</h5>
         <p>
@@ -509,7 +511,7 @@
         </p>
         <h5>Kann ich eine Begleitung mitnehmen?</h5>
         <p>
-            Na klar! Bitte gebt das im Formular unten an.
+            Selbstverständlich! Bitte trage das im Formular unten ein.
         </p>
 
     </div>
