Enable faq for phones

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <li><a href="#events">Ablauf</a></li>
                             <li><a href="#overview">Übersicht</a></li>
                             <li><a href="#eng-pics">Wir</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#faq">FAQ</a></li>
+                            <li><a href="#faq">FAQ</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Location</a></li>
@@ -486,7 +486,7 @@
     </div>-->
 </section>
 
-<section id="faq" class="hidden-sm hidden-xs">
+<section id="faq" class="section-padding">
     <div class="text-center">
         <h3>FAQ</h3>
     </div>
