small text adaptions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <li><a href="#events">Ablauf</a></li>
                             <li><a href="#overview">Übersicht</a></li>
                             <li><a href="#eng-pics">Wir</a></li>
-                            <li><a href="#faq">FAQ</a></li>
+                            <li><a href="#faq">Fragen</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Location</a></li>
@@ -485,7 +485,7 @@
 
 <section id="faq" class="section-padding">
     <div class="text-center">
-        <h3>FAQ</h3>
+        <h3>I hätt a moi a Frage!</h3>
     </div>
     <div class="text-center">
         <h5>Was ist, wenn es regnet?</h5>
@@ -578,6 +578,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <h2>Auf was wartest du noch?</h2>
                 <p>Wir würden uns sehr freuen, wenn du vor vor dem 1. November 2025 antworten kannst.</p>
+                <p>Ihr müsst euch nicht alle einzeln anmelden. Gebt einfach die Anzahl der Begleitpersonen an, wenn ihr zu mehreren kommt.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -599,13 +600,13 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-fire"></i><input name="extras" class=""
-                                                                  placeholder="Bedürfnisse? (Vegan / Glutenunverträglichkeit, ...)">
+                                                                  placeholder="Ernährungsbedürfnisse?">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-users"></i><input name="plusone" class="" type="number" min="0" max="1"
-                                                                     placeholder="Begleitung? (0 / 1)"
+                                <i class="fa fa-users"></i><input name="plusone" class="" type="number" min="0" max="6"
+                                                                     placeholder="Begleitung? (Anzahl)"
                                                                      required>
                             </div>
                         </div>
@@ -613,7 +614,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-users"></i><input name="children" class="" type="number" min="0"
+                                <i class="fa fa-users"></i><input name="children" class="" type="number" min="0" max="4"
                                                                   placeholder="Kinder? (Anzahl)">
                             </div>
                         </div>
