Fix text for rsvp

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <h2>Auf was wartest du noch?</h2>
                 <p>Wir würden uns sehr freuen, wenn du vor vor dem 1. November 2025 antworten kannst.</p>
-                <p>Ihr müsst euch nicht alle einzeln anmelden. Gebt einfach die Anzahl der Begleitpersonen an, wenn ihr zu mehreren kommt.</p>
+                <p>Ihr müsst euch nicht alle einzeln anmelden. Gebt einfach die Anzahl der Begleitpersonen an..</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
