--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         color: white;
         padding: 10px 15px;
         border-radius: 8px;
-        font-size: 16px;
+        font-size: 14px;
         white-space: nowrap;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
@@ -427,12 +427,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/9.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/9.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/9.jpeg" alt=""/>
+                        <img src="img/eng_pics/9.JPG" alt=""/>
                     </div>
                 </a>
             </div>
