Replace rsvp button text

--- a/index.html
+++ b/index.html
@@ -631,8 +631,7 @@
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Ja,
-                        das bin ich!
+                        Abschicken
                     </button>
                 </form>
             </div>
