--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
                         Wir freuen uns, wenn ihr diesen besonderen Tag mit uns feiert – 
                         ganz gleich, was ihr tragt! Wer sich inspirieren lassen möchte: 
                         Ein klassisch-eleganter Look passt perfekt zu unserer Feier. 
-                        Wir lieben [Pastelltöne, Erdtöne, Beige, Grün & Rot], 
-                        doch das ist nur eine Anregung – das Wichtigste ist, dass ihr euch 
+                        Wir lieben folgende Farbtöne... 
+                        <img src="img/color_plate.jpeg" alt="" style="max-inline-size: -webkit-fill-available; margin-top: 3%; margin-bottom: 3%;"/>
+                        ...doch das ist nur eine Anregung – das Wichtigste ist, dass ihr euch 
                         wohlfühlt und den Tag mit uns genießt!
                     </p>
                 </div>
