Fix color_plate image style for phone

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         ganz gleich, was ihr tragt! Wer sich inspirieren lassen möchte: 
                         Ein klassisch-eleganter Look passt perfekt zu unserer Feier. 
                         Wir lieben folgende Farbtöne... 
-                        <img src="img/color_plate.jpeg" alt="" style="max-inline-size: -webkit-fill-available; margin-top: 3%; margin-bottom: 3%;"/>
+                        <img src="img/color_plate.jpeg" alt="" style="max-width: 100%; height: auto; display: block; margin-top: 3%; margin-bottom: 3%;"/>
                         ...doch das ist nur eine Anregung – das Wichtigste ist, dass ihr euch 
                         wohlfühlt und den Tag mit uns genießt!
                     </p>
