Add info for invite code

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
                                                                 class="" min="0"
-                                                                placeholder="Einladungscode"
+                                                                placeholder="Einladungscode (Auf Karte)"
                                                                 required>
                             </div>
                         </div>
