Add email field

--- a/index.html
+++ b/index.html
@@ -621,6 +621,12 @@
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
+                                <i class="fa fa-users"></i><input name="mail" class="" type="email"
+                                                                  placeholder="Email, wegen Fotos (optional)">
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
                                 <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
                                                                 class="" min="0"
                                                                 placeholder="Einladungscode (Auf Karte)"
